[package]
name = "hyperion"
version = "0.1.0-alpha1"
authors = ["Julian Lazaras <umbrasdracodominus@gmail.com>"]
edition = "2018"
keywords = ["web server", "http", "LAMP", "ion", "shil"]
description = "simple LAMP/web stack alternative written to use ion in place of PHP"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "*"
ion-shell = {git = "https://github.com/redox-os/ion"}
rusqlite = "*"
daemonize = "*"
hyper = {version = "0.14.11", features = ["full"]}
rustls = "*"
serde = "*"
serde_derive = "*"
toml = "*"
structopt = "*"
walkdir = "*"
httpdate = "*"
lazy_static = "*"
small = { git = "https://gitlab.redox-os.org/redox-os/small", features = ["std"] }
rand = "*"
hex = "*"
scrypt = "*"
err-derive = "*"
enum-utils = "*"
tokio = {features = ["full"]}
pwhash = "*"
rayon = "*"
serde_json = "*"
ws = "*"
argon2 = "*"


[build-dependencies]
scrypt = "*"
