[package]
name = "plugin"
version = "0.1.0"
authors = ["Julian Lazaras <umbrasdracodominus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "plugin"
crate-type = ["dylib"]

[dependencies]
ion-shell = {git = "https://github.com/divinusdracodominus/ion"}
